# FoxFlow

./: .gitignore  CMakeLists.txt  README.md  foxflow.jl
src/: .main_ir_generation.jl.swp  .main_parser.jl.swp  .main_parser_op.jl.swp  BNF.md  BNF_orig.md  BNF_to_DGMML.md  ast_nodes.jl  code_exec.jl  descent_parser.jl  foxflow.jl  ir_generation.jl  ir_generation_julia.jl  lexer.jl  ll_parser.jl  main_ir_generation.jl  main_ir_generation_original.jl  main_parser.jl  main_parser_op.jl  parser.jl  parser_old.jl  semantics.jl  simulator.jl  simulator_old.jl  tokens.jl
src/examples/: cma.fflow  random_particle.fflow  rseqclustergen.fflow
src/foxflow_old/: foxflow.jl  foxflow_1.jl  foxflow_2.jl
src/ir_generation/: .main_ir_generation.jl.swp  ir.jl  ir_builder.jl  ir_models_section.jl  ir_parameter_section.jl  ir_rule_generation.jl  ir_types_section.jl  main_ir_generation.jl  utils.jl
src/lexer/: lexer.jl  tokens.jl
src/parser/: ast_nodes.jl  main_parser_op.jl
src/playground/: gil.jl  test.jl
src/templates/: sim_main.jl  sim_model.jl  sim_params.jl  sim_rules.jl  sim_settings.jl  sim_type.jl  sim_type_section.jl  sim_types.jl  sim_utils.jl
src/tests/: run_test_im.jl  run_test_lexer.jl  run_test_parser.jl  test_ast.dot  test_comment_lexer.fflow  test_sections_lexer.fflow  test_types.fflow  test_types_2.fflow  test_types_3.fflow  test_types_4.fflow  test_types_5.fflow  test_types_6.fflow  test_types_7.fflow
src/tests/branch_sim/: rules.fflow  types.fflow
src/tests/examples/: 20215_01_17.txt  clustergen.fflow  cma.fflow  test
src/tests/expressions/: expressions.fflow
src/tests/generated_tests/: CMakeLists.txt
src/tests/generated_tests/correct_generated/: main.cpp  model.h  parameters.h  rules.h  types.h
src/tests/generated_tests/generated_2/: main.cpp  model.h  parameters.h  rules.h  types.h
src/tests/parameters/: test_parameters_1.fflow
src/tests/particle_sim/: rules.fflow  rules_triple.fflow
src/tests/particle_sim_branching/: params.fflow  rules.fflow
src/tests/particle_sim_no_ode/: fixed_heaviside_rules.fflow  rules.fflow
src/tests/rules/: solution_test_rule_lexer.txt  test_edge_rule.fflow  test_rule_1.fflow  test_rule_lexer.fflow
src/transformer/: transform_types.jl
src/utils/: dot_generation.jl  test.dot
